# Kajam-13

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
assets/: bird.json  deer.json
assets/critters/: bunny.json
assets/fonts/: PorspicanSerif-Regular.txt
assets/maps/: map_de_dust_2.json  map_load.json  map_over_the_hills.json  map_plains.json  map_test.json  map_valley_of_death.json
assets/units/: all_units.json  archer.json  barrierweaver.aseprite  cannon.aseprite  cannon.json  crossbow.aseprite  crossbow.json  crossbowman.json  horseman.json  peasant.json  shieldmage.json  shieldman.json  starting_units.json  swordman.json  unit_archer.json  unit_barrierweaver.json  unit_cannon.json  unit_crossbow.json  unit_horseman.json  unit_peasant.json  unit_shieldmage.json  unit_shieldman.json  unit_swordman.json
assets_src/: archer.aseprite  barrierweaver.json  bird.aseprite  bunny.aseprite  crossbowman.aseprite  crossbowman.json  horseman.aseprite  peasant.aseprite  shieldman.aseprite  swordman.aseprite
config/cmake/: helpers.cmake
ext/: CMakeLists.txt
ext/asio/: CMakeLists.txt
ext/imgui-sfml/: CMakeLists.txt
ext/tileson/: CMakeLists.txt
ext/zlib/: CMakeLists.txt
impl/: CMakeLists.txt
impl/client/: CMakeLists.txt  main.cpp
impl/game_client/: CMakeLists.txt  main.cpp  main.hpp
impl/game_client_lib/: CMakeLists.txt  bird.cpp  bird.hpp  client_network_connection.cpp  client_network_connection.hpp  common_functions.cpp  common_functions.hpp  network_connector.cpp  network_connector.hpp  player_id_dispatcher.cpp  player_id_dispatcher.hpp  server_connection.cpp  server_connection.h  server_connection.hpp  server_connector.cpp  server_connector.hpp  state_game.cpp  state_game.hpp  state_intro.cpp  state_menu.cpp  state_menu.hpp  terrain_renderer.cpp  terrain_renderer.hpp  unit.cpp  unit.hpp  unit_id_manager.cpp  unit_id_manager.hpp  unit_interface.cpp  unit_interface.hpp  upgrade_info_client.cpp  upgrade_info_client.hpp
impl/game_client_lib/critters/: bird.hpp  bunny.hpp  critter.cpp  critter.hpp  deer.hpp
impl/game_client_lib/internal_state/: common_functions.cpp  common_functions.hpp  end_lose.cpp  end_lose.hpp  end_win.cpp  end_win.hpp  internal_state_interface.cpp  internal_state_interface.hpp  internal_state_manager.cpp  internal_state_manager.hpp  place_units.cpp  place_units.hpp  playback.cpp  playback.hpp  select_starting_units.cpp  select_starting_units.hpp  wait_for_all_players.cpp  wait_for_all_players.hpp  wait_for_simulation_results.cpp  wait_for_simulation_results.hpp
impl/game_client_lib/unit_placement/: placed_unit.cpp  placed_unit.hpp  placement_manager.cpp  placement_manager.hpp  upgrade_manager.cpp  upgrade_manager.hpp
impl/game_common_lib/: CMakeLists.txt  arrow_info.cpp  arrow_info.hpp  client_end_placement_data.cpp  client_end_placement_data.hpp  client_placement_data.cpp  client_placement_data.hpp  damage_info.cpp  damage_info.hpp  game_properties.cpp  game_properties.hpp  json_keys.cpp  json_keys.hpp  message.cpp  message.h  message.hpp  network_helpers.cpp  network_helpers.hpp  network_properties.cpp  network_properties.hpp  receive_buffer.cpp  receive_buffer.hpp  simulation_result_data.cpp  simulation_result_data.hpp  unit_info.cpp  unit_info.hpp  unit_info_collection.cpp  unit_info_collection.hpp  upgrade_unit_data.cpp  upgrade_unit_data.hpp
impl/game_common_lib/compression/: compressor_impl.cpp  compressor_impl.hpp  compressor_interface.cpp  compressor_interface.hpp  compressor_none.cpp  compressor_none.hpp  logging_compressor.cpp  logging_compressor.hpp
impl/game_common_lib/map/: placement_area.cpp  placement_area.hpp  terrain.cpp  terrain.hpp  terrain_renderer.cpp  terrain_renderer.hpp
impl/game_common_lib/network_data/: ai_info.cpp  ai_info.hpp  animation_info.cpp  animation_info.hpp  armor_info.cpp  armor_info.hpp  arrow_info.cpp  arrow_info.hpp  barrier_info.cpp  barrier_info.hpp  damage_info.cpp  damage_info.hpp  explosion_info.cpp  explosion_info.hpp  select_unit_info.cpp  select_unit_info.hpp  shield_info.cpp  shield_info.hpp  unit_client_to_server_data.cpp  unit_client_to_server_data.hpp  unit_info.cpp  unit_info.hpp  unit_info_collection.cpp  unit_info_collection.hpp  unit_remove_client_to_server_data.cpp  unit_remove_client_to_server_data.hpp  unit_server_to_client_data.cpp  unit_server_to_client_data.hpp  upgrade_info.cpp  upgrade_info.hpp  upgrade_value.cpp  upgrade_value.hpp
impl/game_server/: CMakeLists.txt  main.cpp
impl/game_server_lib/: CMakeLists.txt  close_combat_info.cpp  close_combat_info.hpp  damage_info.cpp  damage_info.hpp  empty_class.cpp  empty_class.h  game_server.cpp  game_server.hpp  game_simulation.cpp  game_simulation.hpp  player_info.cpp  player_info.hpp  server_network_connection.cpp  server_network_connection.hpp  server_unit.cpp  server_unit.hpp  simulation_object_interface.cpp  simulation_object_interface.hpp  simulation_result_message_sender.cpp  simulation_result_message_sender.hpp  simulation_result_sender_interface.cpp  simulation_result_sender_interface.hpp  unit_server_round_start_data.cpp  unit_server_round_start_data.hpp  validity_checker.cpp  validity_checker.hpp  world_info_interface.cpp  world_info_interface.hpp
impl/game_server_lib/units/: server_unit.cpp  server_unit.hpp
impl/game_server_lib/units/ai/: ai_archer.cpp  ai_archer.hpp  ai_barrierweaver.cpp  ai_barrierweaver.hpp  ai_cannon.cpp  ai_cannon.hpp  ai_close_combat.cpp  ai_close_combat.hpp  ai_interface.cpp  ai_interface.hpp  ai_ranged_combat.cpp  ai_ranged_combat.hpp  ai_shieldmage.cpp  ai_shieldmage.hpp  ai_swordman.cpp  ai_swordman.hpp
impl/gamelib_common/: CMakeLists.txt  game_properties.cpp  network_properties.cpp  network_properties.hpp
impl/jamtemplate/: CMakeLists.txt
impl/server/: CMakeLists.txt  main.cpp
resources/: endgame.psd  grid.psd  terrain.blend  textButton.psd
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  network_data_size_test.cpp
test/unit/: CMakeLists.txt
test/unit/common_lib_test/: CMakeLists.txt  terrain_test.cpp
(+79 files in other folders)
